# Research-SeBoCa-Test

./: .gitignore  build_mixr_model.m  mixr1_analysis.py  mixr1_log_20260616_152828.csv  mixr1_log_20260616_152828.mat  mixr1_log_20260622_163434.csv  mixr1_log_20260622_163434.mat  mixr1_log_20260623_161029.csv  mixr1_log_20260623_161029.mat  mixr1_log_20260623_161042.csv  mixr1_log_20260623_161042.mat  mixr1_log_20260623_161324.csv  mixr1_log_20260623_161324.mat  mixr1_log_20260623_161326.csv  mixr1_log_20260623_161326.mat  mixr1_log_20260707_154756.csv  mixr1_log_20260707_154756.mat  mixr1_log_20260714_164644.csv  mixr1_log_20260714_164644.mat  mixr1_log_20260722_144047.csv  mixr1_log_20260722_144047.mat  mixr1_log_20260722_163140.csv  mixr1_log_20260722_163140.mat  mixr1_log_20260722_164019.csv  mixr1_log_20260722_164019.mat  mixr1_log_20260722_164347.csv  mixr1_log_20260722_164347.mat  mixr1_log_20260722_164711.csv  mixr1_log_20260722_164711.mat  mixr_dashboard.py  motor.py  motor_estimator.py  pyproject.toml  test.py  water.py  water_surface_data.csv
